[package]
name = "anchal"
version = "0.1.1"
edition = "2021"
authors = ["Shivank Anchal <anchalshivank99@gmail.com>"]
description = "A protocol-agnostic transport layer for Rust"
license = "Apache-2.0"
repository = "https://github.com/anchalshivank/anchal"
documentation = "https://docs.rs/anchal"
keywords = ["networking", "transport", "protocol-agnostic"]

[dependencies]
quinn = "0.11.5"
thiserror = "2.0.3"
async-trait = "0.1.83"
tokio = { version = "1.41.1", features = ["full"] }
